-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
None
For some reason the thread running BluetoothServerSocket.accept() crashes when BluetoothServerSocket.close() is called although the documentation clearly states the possibility.
Console output:
D/Qt (29422): ../BtTest/btlocaldevice.cpp:428 (void BtLocalDevice::serverListenPort()): ###### Start listening via port
D/Qt (29422): qbluetoothserver_android.cpp:197 (bool QBluetoothServer::listen(const QBluetoothAddress&, quint16)): qt.bluetooth.android: Port 1 registered
D/Qt (29422): ../BtTest/btlocaldevice.cpp:430 (void BtLocalDevice::serverListenPort()): ###### Listening(Expecting TRUE): true
D/Qt (29422): ../BtTest/btlocaldevice.cpp:470 (void BtLocalDevice::serverListenPort()): ###### Registering service on "98:D6:F7:D9:A5:3D"
D/Qt (29422): qbluetoothserver_android.cpp:87 (bool QBluetoothServerPrivate::initiateActiveListening(const QBluetoothUuid&, const QString&)): qt.bluetooth.android: Initiate active listening "
" "Bt Chat Server"
D/Qt (29422): android/serveracceptancethread.cpp:78 (virtual void ServerAcceptanceThread::run()): qt.bluetooth.android: Starting ServerSocketAccept thread
D/Qt (29422): android/serveracceptancethread.cpp:101 (virtual void ServerAcceptanceThread::run()): QFlags() 0
D/Qt (29422): android/serveracceptancethread.cpp:103 (virtual void ServerAcceptanceThread::run()): qt.bluetooth.android: InSecure listening
W/BluetoothAdapter(29422): getBluetoothService() called with no BluetoothManagerCallback
D/Qt (29422): android/serveracceptancethread.cpp:132 (virtual void ServerAcceptanceThread::run()): qt.bluetooth.android: Waiting for new incoming socket
D/Qt (29422): ../BtTest/btlocaldevice.cpp:496 (void BtLocalDevice::serverClose()): ###### Closing Server socket
W/dalvikvm(29422): Invalid indirect reference 0x42466e20 in decodeIndirectRef
I/dalvikvm(29422): "Thread-1228" prio=5 tid=15 RUNNABLE
I/dalvikvm(29422): | group="main" sCount=0 dsCount=0 obj=0x42444fc8 self=0x79aeea60
I/dalvikvm(29422): | sysTid=29568 nice=0 sched=0/0 cgrp=apps handle=2040630328
I/dalvikvm(29422): | state=R schedstat=( 0 0 0 ) utm=0 stm=0 core=2
I/dalvikvm(29422): at dalvik.system.NativeStart.run(Native Method)
I/dalvikvm(29422):
E/dalvikvm(29422): VM aborting
F/libc (29422): Fatal signal 6 (SIGABRT) at 0x000072ee (code=-6), thread 29568 (ServerAcceptanc)
- is required for
-
QTBUG-36712 Issues to be fixed before 5.3.0 Beta 1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36754 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 78724,4 | Android: Fix crash in QBluetoothServer::close() | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |