src/android/bluetooth/bluetooth.pri
@@ -5,7 +5,9 @@ PATHPREFIX = $$PWD/src/org/qtproject/qt5/android/bluetooth
 
 JAVACLASSPATH += $$PWD/src/
 JAVASOURCES += \
-    $$PATHPREFIX/QtBluetoothBroadcastReceiver.java
+    $$PATHPREFIX/QtBluetoothBroadcastReceiver.java \
+    $$PATHPREFIX/QtBluetoothSocketServer.java
+
 
 # install
 target.path = $$[QT_INSTALL_PREFIX]/jar
